--- a/src/css/text-anim.css
+++ b/src/css/text-anim.css
@@ -132,6 +132,7 @@ span:nth-child(20) {
   border: 1px solid royalblue;
   border-radius: 50px;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .circle-animation:hover,
